Footnotes should not be hidden behind the fixed header

--- a/_assets/stylesheets/critical-styles.scss
+++ b/_assets/stylesheets/critical-styles.scss
@@ -48,7 +48,9 @@ h1, h2, h3, h4, h5, h6 {
   color: $color-title;
   letter-spacing: -.01em;
   margin-bottom: .5em;
+}
 
+h1, h2, h3, h4, h5, h6, [id^="fn:"] {
   &:target:before {
     content: "";
     display: block;
